--- a/package.json
+++ b/package.json
@@ -1,55 +1,84 @@
 {
-    "name": "skyeye-vue-transition-animate",
-    "version": "1.0.0",
-    "description": "自定义 transition 动画",
-    "main": "dist/skyeye-vue-transition-animate.min.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "node build/dev.js",
-        "pro": "node build/pro.js",
-        "examplespro": "node build/examples.pro.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": ""
-    },
-    "keywords": [
-        "vue",
-        "transition"
-    ],
-    "author": "leijunping@360",
-    "license": "ISC",
-    "devDependencies": {
-        "babel-core": "^6.9.0",
-        "babel-eslint": "^6.0.4",
-        "babel-loader": "^6.2.4",
-        "babel-preset-es2015": "^6.9.0",
-        "css-loader": "^0.23.1",
-        "eslint": "^2.10.2",
-        "eslint-config-standard": "^5.3.1",
-        "eslint-friendly-formatter": "^2.0.4",
-        "eslint-loader": "^1.3.0",
-        "eslint-plugin-html": "^1.4.0",
-        "eslint-plugin-promise": "^1.1.0",
-        "eslint-plugin-standard": "^1.3.2",
-        "file-loader": "^0.8.5",
-        "highlight.js": "^9.4.0",
-        "html-loader": "^0.4.3",
-        "jquery": "^2.2.4",
-        "less": "^2.7.1",
-        "less-loader": "^2.2.3",
-        "ora": "^0.2.1",
-        "style-loader": "^0.13.1",
-        "url-loader": "^0.5.7",
-        "vue": "^1.0.24",
-        "webpack": "^1.13.0",
-        "webpack-dev-server": "^1.14.1",
-        "webpack-merge": "^0.12.0"
-    },
-    "dependencies": {},
-    "_addons": {
-        "filename": "skyeye-vue-transition-animate.min.js",
-        "library": "skyeyeTransitionAnimate",
-        "group": "360 SkyEye FrontEnd"
-    }
+  "name": "skyeye-vue-transition-animate",
+  "version": "1.1.2",
+  "description": "自定义 transition 动画",
+  "main": "dist/skyeye-vue-transition-animate.min.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "grunt && node build/dev.js",
+    "pro": "node build/pro.js",
+    "start": "node build/server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/skyeyefront/vue-transition-animate.git"
+  },
+  "keywords": [
+    "vue",
+    "transition"
+  ],
+  "author": "leijunping@360",
+  "license": "ISC",
+  "devDependencies": {
+    "autoprefixer": "~6.3.6",
+    "babel-core": "^6.9.0",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "css-loader": "^0.23.1",
+    "eslint": "^2.10.2",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-friendly-formatter": "^2.0.4",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-html": "^1.4.0",
+    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-standard": "^1.3.2",
+    "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "grunt": "~1.0.1",
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-copy": "~1.0.0",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.21.0",
+    "imports-loader": "~0.6.5",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "mockjs": "^1.0.1-beta2",
+    "ora": "^0.2.1",
+    "path": "^0.12.7",
+    "postcss-loader": "~0.9.1",
+    "precss": "~1.4.0",
+    "progress": "~1.1.8",
+    "socket.io": "^1.4.8",
+    "style-loader": "^0.13.1",
+    "stylelint-config-standard": "^10.0.0",
+    "stylelint-webpack-plugin": "^0.2.0",
+    "time-grunt": "~1.3.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.12.0",
+    "worker-loader": "~0.7.0"
+  },
+  "dependencies": {
+    "animate.css": "^3.5.1",
+    "bootstrap": "^3.3.6",
+    "d3": "^3.5.17",
+    "font-awesome": "^4.6.3",
+    "highcharts": "^4.2.5",
+    "jquery": "~2.1.4",
+    "jquery-ui": "^1.10.5",
+    "lodash": "^4.13.1",
+    "moment": "^2.13.0",
+    "postal": "^2.0.4",
+    "socket.io-client": "^1.4.6",
+    "vue": "^1.0.24",
+    "vuex": "^0.6.3"
+  },
+  "_addons": {
+    "filename": "skyeye-vue-transition-animate.min.js",
+    "library": "skyeye-vue-transition-animate",
+    "group": "360 SkyEye FrontEnd"
+  }
 }
